--- a/genindex.html
+++ b/genindex.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="_static/alabaster.css" />
     <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js"></script>
+    <script src="_static/jquery.js"></script>
+    <script src="_static/underscore.js"></script>
+    <script src="_static/_sphinx_javascript_frameworks_compat.js"></script>
     <script src="_static/doctools.js"></script>
     <script src="_static/sphinx_highlight.js"></script>
     <link rel="index" title="Index" href="#" />
@@ -112,6 +115,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="taxon.html#pydwcviz.taxon.plot_dist">plot_dist() (in module pydwcviz.taxon)</a>
 </li>
+      <li><a href="map.html#pydwcviz.map.points">points() (in module pydwcviz.map)</a>
+</li>
       <li>
     pydwcviz.diversity
 
@@ -211,7 +216,7 @@
       &copy;2022, Ayush Anand, Tylar Murray.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 6.1.3</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 5.3.0</a>
       &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.13</a>
       
     </div>
